--- a/index.html
+++ b/index.html
@@ -1406,43 +1406,43 @@ padding-right: 10px; /* Espaço para a barra de rolagem */
 }
 
 /* Roleta Diária */
-/* --- CSS DA ROLETA CORRIGIDO (Substitua o antigo) --- */
+/* --- ROLETA FINAL (Visual + Seta Corrigida) --- */
 .roleta-container {
     background: #111;
     border: 4px solid #d4af37;
     border-radius: 15px;
-    height: 100px;
+    height: 100px; 
     margin: 20px auto;
-    position: relative; /* Base para a seta */
-    overflow: hidden;   /* Corta os números laterais */
+    position: relative; /* Importante para a seta */
+    overflow: hidden;   /* Corta o que sai da caixa */
     width: 100%;
     max-width: 320px;
-    box-shadow: inset 0 0 20px rgba(0,0,0,0.9);
+    box-shadow: inset 0 0 30px rgba(0,0,0,1); /* Sombra interna mais forte */
 }
 
-/* Sombras laterais (Foco) */
+/* Sombras laterais (Fade) */
 .roleta-container::before, .roleta-container::after {
     content: '';
     position: absolute;
-    top: 0; bottom: 0; width: 50px; z-index: 2; pointer-events: none;
+    top: 0; bottom: 0; width: 60px; z-index: 2; pointer-events: none;
 }
-.roleta-container::before { left: 0; background: linear-gradient(to right, #111, transparent); }
-.roleta-container::after { right: 0; background: linear-gradient(to left, #111, transparent); }
+.roleta-container::before { left: 0; background: linear-gradient(to right, #000, transparent); }
+.roleta-container::after { right: 0; background: linear-gradient(to left, #000, transparent); }
 
-/* SETA: Agora é um triângulo CSS puro (ignora o emoji) */
+/* SETA INDICADORA: Centralizada e Visível */
 .seta-roleta {
     position: absolute;
     left: 50%;
-    top: 0; /* Encostada no topo, DENTRO da caixa */
+    top: 0; /* Encostada no topo DENTRO da caixa */
     transform: translateX(-50%);
     width: 0; 
     height: 0; 
-    font-size: 0; /* Esconde o emoji antigo */
+    /* Triângulo Vermelho Grande apontando para baixo */
     border-left: 15px solid transparent;
     border-right: 15px solid transparent;
-    border-top: 25px solid #e74c3c; /* Triângulo Vermelho */
-    z-index: 20; 
-    filter: drop-shadow(0 2px 4px rgba(0,0,0,0.8));
+    border-top: 25px solid #ff0000; 
+    z-index: 50; /* Z-Index bem alto para ficar acima de tudo */
+    filter: drop-shadow(0 4px 2px rgba(0,0,0,0.8)); /* Sombra na seta */
 }
 
 .roleta-faixa {
@@ -1453,28 +1453,28 @@ padding-right: 10px; /* Espaço para a barra de rolagem */
 }
 
 .roleta-item {
-    /* MEDIDA EXATA: 80px + 5px margem esq + 5px margem dir = 90px */
+    /* MEDIDA EXATA: 80px + 5px margem esq + 5px margem dir = 90px TOTAL */
     width: 80px; 
     height: 80px;
     margin: 0 5px; 
     flex-shrink: 0;
-    border-radius: 10px;
+    border-radius: 12px;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 28px;
-    font-weight: 800;
-    font-family: monospace;
+    font-size: 32px; /* Fonte maior */
+    font-weight: 900;
+    font-family: 'Arial Black', sans-serif;
     box-shadow: inset 0 0 10px rgba(0,0,0,0.5);
-    border: 2px solid rgba(255,255,255,0.1);
+    border: 2px solid rgba(255,255,255,0.2);
 }
 
-/* Cores */
-.tema-barbearia .roleta-item:nth-child(odd) { background: #ffd700; color: #000; }
-.tema-barbearia .roleta-item:nth-child(even) { background: #222; color: #ffd700; }
-.tema-feminino .roleta-item:nth-child(odd) { background: #ff9a9e; color: #fff; }
-.tema-feminino .roleta-item:nth-child(even) { background: #222; color: #ff9a9e; }
-.roleta-item.especial { background: #fff !important; color: #333 !important; border: 2px solid gold; }
+/* Cores Vivas */
+.tema-barbearia .roleta-item:nth-child(odd) { background: #ffcc00; color: #000; }
+.tema-barbearia .roleta-item:nth-child(even) { background: #1a1a1a; color: #ffcc00; border-color: #ffcc00; }
+.tema-feminino .roleta-item:nth-child(odd) { background: #ff6b81; color: #fff; }
+.tema-feminino .roleta-item:nth-child(even) { background: #1a1a1a; color: #ff6b81; border-color: #ff6b81; }
+.roleta-item.especial { background: #fff !important; color: #333 !important; border: 3px solid gold; }
 
 @keyframes pulse-glow {
     from { box-shadow: 0 0 5px rgba(255,255,255,0.5); }
